2006-01-18  Edward Hervey  <edward@fluendo.com>

	Release 0.9.9.2 "No te entiendo"

	* RELEASE:
	* configure.ac:

2006-01-18  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Require gnonlin 0.10.0.5
	
	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/objectfactory.py:
	cleanup.
	
	* pitivi/ui/sourcefactories.py:
	Add mini-doc
	* pitivi/ui/timeline.py:
	cleanup.
	* pitivi/ui/timelineobjects.py:
	Remove/debug all the print statements.
	* pitivi/ui/viewer.py:
	cleanup.

2006-01-11  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	Don't emit 'finished-analyzing' if there's nothing discovered.

2006-01-11  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	PyGnome 2.10.0 is sufficient requirement.
	* pitivi/ui/plumber.py:
	Use gconf*sink elements instead of creating them ourselves.

2006-01-08  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/plumber.py:
	Check for the gstreamer 0.10 (and not 0.9) gconf keys.

2005-12-24  Edward Hervey  <edward@fluendo.com>

	0.9.9.1 release
	
	* RELEASE:
	* bin/pitivi.in:
	Switch on threads
	* configure.ac:
	0.9.9.1 release (thanks a lot stupid sourceforge)
	* pitivi/bin.py:
	don't seek back to the beginning after recording in fact
	* pitivi/ui/glade.py:
	esthetic fixes
	* pitivi/ui/viewer.py:
	Deactivate record button since it doesn't work 100% yet

2005-12-21  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Bump requirement to gst(-python) 0.10.0
	* pitivi/bin.py:
	Correct seek when stoping recording
	* pitivi/discoverer.py:
	Correctly emit 'finished-analyzing' when the discoverer
	has finished analyzing a uri.
	* pitivi/sourcelist.py:
	Remove 'file-is-valid' signal.
	The SourceList now only emits the 'file-added' signal
	when the file was correctly discovered.
	* pitivi/ui/gstwidget.py:
	Add debugging
	* pitivi/ui/sourcefactories.py:
	Use the new Discoverer/SourceList design
	Add the FileSourceFactory to the gtk.TreeModel only, and when,
	the uri was properly discovered.
	* pitivi/ui/viewer.py: