@@ -1,6 +1,6 @@
 AC_INIT(AUTHORS)
 
-AS_VERSION(pitivi, PITIVI, 0, 9, 9, 2)
+AS_VERSION(pitivi, PITIVI, 0, 9, 9, 3)
 AC_SUBST(RELEASE, $PITIVI_RELEASE)
 
 AC_SUBST_FILE(AUTHORS)
